Created index.html and updated README for portfolio site

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>📧 Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    <p>🔗 LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+    <p>📧 Email: <a href="mailto:rachana.kataria@gmail.com">rachana.kataria@gmail.com</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/rachana-kataria-200a791/" target="_blank">https://www.linkedin.com/in/rachana-kataria-200a791/</a></p>
     <p>💻 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
   </section>
 
