Updated index.html for the webapp arch image and updated introduction.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
   <section id="about">
     <h2>About Me</h2>
     <p>Senior Technology and Cloud Solutions Architect with over 23 years of global experience designing and deploying secure, resilient, and scalable enterprise systems. Specializes in cloud architecture, cybersecurity, disaster recovery, and enterprise software solutions.
+    </p>
+    <p>
 Expert in the full software lifecycle, from requirement analysis and architecture to design, implementation, and maintenance. Technical skills include C++/C, UNIX/Windows, shell scripting, multi-threading, RDBMS, GUI design, Docker, AI/ML-driven system optimization, full-stack development, RESTful APIs, Elasticsearch, and microservices.
 Hands-on experience in cloud and virtualization environments, deploying and managing storage and backup solutions, and integrating security and compliance best practices.
-This portfolio showcases real-world projects in AWS, automation, multi-tier web applications, and cloud-native solutions, demonstrating the ability to build secure, scalable, and high-performing systems.</p>
+This portfolio showcases real-world projects in AWS, automation, multi-tier web applications, and cloud-native solutions, demonstrating the ability to build secure, scalable, and high-performing systems.
+    </p>
        
     <p>My portfolio showcases hands-on projects in AWS, automation, and cloud-native solutions.</p>
   </section>
@@ -45,8 +48,9 @@ This portfolio showcases real-world projects in AWS, automation, multi-tier web 
 
     <div class="project">
       <h3>🚀 AWS Multi-Tier Web Application</h3>
-      <p>Scalable AWS multi-tier web app with EC2, RDS, Auto Scaling, and Terraform automation.</p>
-    <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture-diagram.png" 
+      <p>AWS multi-tier web application designed for security, scalability and reliability, built within a VPC and utilizing EC2, RDS, Auto Scaling, and Terraform for automated infrastructure deployment.
+      </p>
+    <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png" 
          alt="Architecture Diagram" style="max-width:100%;">
     <a href="https://github.com/rpatel-eng/aws-multi-tier-webapp" target="_blank">
         View Project Repository
