--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ This portfolio showcases real-world projects in AWS, automation, multi-tier web 
       <h3>🚀 AWS Multi-Tier Web Application</h3>
       <p>AWS multi-tier web application designed for security, scalability and reliability, built within a VPC and utilizing EC2, RDS, Auto Scaling, and Terraform for automated infrastructure deployment.
       </p>
-    <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/main/images/architecture_diagram.png" 
-         alt="Architecture Diagram" style="max-width:100%;">
-    <a href="https://github.com/rpatel-eng/aws-multi-tier-webapp/main/main" target="_blank">
+    <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png" 
+         alt="Architecture Diagram" style="max-width:250px; width:100%; display:block; margin:0 auto; border:1px solid #ddd; border-radius:6px;">
+    <a href="https://github.com/rpatel-eng/aws-multi-tier-webapp" target="_blank" style="display:inline-block; margin-top:8px; font-size:1.2rem; text-decoration:none;">
         View Project Repository
     </a>
     </div>
@@ -70,7 +70,7 @@ This portfolio showcases real-world projects in AWS, automation, multi-tier web 
     <h2>Contact</h2>
     <p>📧 Email: <a href="mailto:rachana.kataria@gmail.com">rachana.kataria@gmail.com</a></p>
     <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/rachana-kataria-200a791/" target="_blank">https://www.linkedin.com/in/rachana-kataria-200a791/</a></p>
-    <p>💻 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p>💻 GitHub: <a href="https://github.com/rpatel-eng" target="_blank">github.com/rpatel-eng</a></p>
   </section>
 
   <footer>
