Updated index.html for the image thumbnail

--- a/index.html
+++ b/index.html
@@ -47,14 +47,23 @@ This portfolio showcases real-world projects in AWS, automation, multi-tier web 
     <h2>Projects</h2>
 
     <div class="project">
-      <h3>🚀 AWS Multi-Tier Web Application</h3>
+      <h3> AWS Multi-Tier Web Application</h3>
       <p>AWS multi-tier web application designed for security, scalability and reliability, built within a VPC and utilizing EC2, RDS, Auto Scaling, and Terraform for automated infrastructure deployment.
       </p>
-    <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png" 
-         alt="Architecture Diagram" style="max-width:250px; width:100%; display:block; margin:0 auto; border:1px solid #ddd; border-radius:6px;">
-    <a href="https://github.com/rpatel-eng/aws-multi-tier-webapp" target="_blank" style="display:inline-block; margin-top:8px; font-size:1.2rem; text-decoration:none;">
-        View Project Repository
-    </a>
+      <div style="display:flex; align-items:center; gap:10px;">
+      <!-- Thumbnail image -->
+        <a href="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png" target="_blank">
+        <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png"
+           alt="Architecture Diagram"
+           style="max-width:120px; width:100%; border:1px solid #ddd; border-radius:4px;">
+        </a>
+
+        <!-- Repository link next to the image -->
+        <a href="https://github.com/rpatel-eng/aws-multi-tier-webapp" target="_blank"
+                style="font-size:1rem; color:#0366d6; text-decoration:none; font-weight:bold;">
+                View Project Repository
+         </a>
+       </div>
     </div>
 
     <div class="project">
