Updated main page to include second project on aws wordpress.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ This portfolio showcases real-world projects in AWS, automation, multi-tier web 
         <a href="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png" target="_blank">
         <img src="https://raw.githubusercontent.com/rpatel-eng/aws-multi-tier-webapp/main/images/architecture_diagram.png"
            alt="Architecture Diagram"
-           style="max-width:120px; width:100%; border:1px solid #ddd; border-radius:4px;">
+           style="width:100px; height:auto; border-radius:6px; margin-right:10px; vertical-align:middle;">
         </a>
 
         <!-- Repository link next to the image -->
@@ -67,11 +67,19 @@ This portfolio showcases real-world projects in AWS, automation, multi-tier web 
     </div>
 
     <div class="project">
-      <h3>💡 LAMP Stack on AWS (CloudFormation)</h3>
-      <p>Created a CloudFormation template to deploy a LAMP stack (Linux, Apache, MySQL, PHP) 
-         with secure networking and auto scaling.</p>
-      <a href="https://github.com/yourusername/lamp-cloudformation" class="button" target="_blank">View Repo</a>
-    </div>
+    <h3>📦 WordPress on AWS</h3>
+       <p>
+           Automated deployment of WordPress on AWS using EC2, RDS, Lambda, and CloudFormation. 
+           The project demonstrates scalable architecture, automated provisioning, and integration 
+           of start/stop scripts for cost optimization.
+       </p>
+       <img src="https://raw.githubusercontent.com/rpatel-eng/aws-wordpress-stack/main/images/aws_wordpress_architecture_diagram.png"
+       alt="WordPress AWS Architecture Diagram" 
+       style="width:100px; height:auto; border-radius:6px; margin-right:10px; vertical-align:middle;">
+       <a href="https://github.com/rpatel-eng/aws-wordpress-stack" target="_blank" style="vertical-align:middle;">
+           View Project Repository
+       </a>
+     </div>
 
   </section>
 
