--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Senior Technology and Cloud Solutions Architect with over 23 years of global experience designing and deploying secure, resilient, and scalable enterprise systems. Specializes in cloud architecture, cybersecurity, disaster recovery, and enterprise software solutions.
-    </p>
     <p>
-Expert in the full software lifecycle, from requirement analysis and architecture to design, implementation, and maintenance. Technical skills include C++/C, UNIX/Windows, shell scripting, multi-threading, RDBMS, GUI design, Docker, AI/ML-driven system optimization, full-stack development, RESTful APIs, Elasticsearch, and microservices.
-Hands-on experience in cloud and virtualization environments, deploying and managing storage and backup solutions, and integrating security and compliance best practices.
-This portfolio showcases real-world projects in AWS, automation, multi-tier web applications, and cloud-native solutions, demonstrating the ability to build secure, scalable, and high-performing systems.
+      Senior Technology and Cloud Solutions Architect with more than two decades of global experience delivering secure, scalable, and resilient enterprise systems. Specialized in cloud architecture, cybersecurity, automation, and multi-tier applications, with proven success in designing solutions that balance performance, security, and compliance.
     </p>
-       
-    <p>My portfolio showcases hands-on projects in AWS, automation, and cloud-native solutions.</p>
+
+    <p>
+      This portfolio highlights hands-on projects in AWS, infrastructure automation, and cloud-native applications, demonstrating expertise in building systems that are reliable, adaptable, and business-focused.
+   </p>
+     
   </section>
 
   <section id="projects">
