--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
        </a>
      </div>
 
+     <div class="project">
+         <h3>📡 Real-Time IoT Data Streaming</h3>
+             <p>
+                  Designed and implemented a serverless real-time streaming pipeline on AWS to process IoT sensor data.
+                  The solution ingests continuous data using <b>Amazon Kinesis Data Streams</b>, processes events with
+                  AWS Lambda, and persists structured records in Amazon DynamoDB for scalable NoSQL storage.
+                  Monitoring and debugging are supported via Amazon CloudWatch.
+            </p>
+            <img src="https://raw.githubusercontent.com/rpatel-eng/aws-kinesis-dynamodb-project/main/images/aws_iot_streaming_architecture.png"
+                 alt="IoT Data Streaming Architecture Diagram"
+                 style="width:100px; height:auto; border-radius:6px; margin-right:10px; vertical-align:middle;">
+           <a href="https://github.com/rpatel-eng/aws-kinesis-dynamodb-project" target="_blank" style="vertical-align:middle;">
+             View Project Repository
+          </a>
+     </div>
+
   </section>
 
   <section id="contact">
