Fixed kinesis project image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>Projects</h2>
 
     <div class="project">
-      <h3> AWS Multi-Tier Web Application</h3>
+      <h3>🖥️ AWS Multi-Tier Web Application</h3>
       <p>AWS multi-tier web application designed for security, scalability and reliability, built within a VPC and utilizing EC2, RDS, Auto Scaling, and Terraform for automated infrastructure deployment.
       </p>
       <div style="display:flex; align-items:center; gap:10px;">
@@ -84,11 +84,11 @@
          <h3>📡 Real-Time IoT Data Streaming</h3>
              <p>
                   Designed and implemented a serverless real-time streaming pipeline on AWS to process IoT sensor data.
-                  The solution ingests continuous data using <b>Amazon Kinesis Data Streams</b>, processes events with
+                  The solution ingests continuous data using Amazon Kinesis Data Streams,processes events with
                   AWS Lambda, and persists structured records in Amazon DynamoDB for scalable NoSQL storage.
                   Monitoring and debugging are supported via Amazon CloudWatch.
             </p>
-            <img src="https://raw.githubusercontent.com/rpatel-eng/aws-kinesis-dynamodb-project/main/images/aws_iot_streaming_architecture.png"
+            <img src="https://raw.githubusercontent.com/rpatel-eng/aws-kinesis-dynamodb/main/images/aws_iot_streaming_architecture.png"
                  alt="IoT Data Streaming Architecture Diagram"
                  style="width:100px; height:auto; border-radius:6px; margin-right:10px; vertical-align:middle;">
            <a href="https://github.com/rpatel-eng/aws-kinesis-dynamodb-project" target="_blank" style="vertical-align:middle;">
